methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:48: error: not found: value foward
  foward();
  ^